# TransCoder

./: .gitignore  install.sh  play.sh  pyproject.toml  translate.py
play/: in.py
preprocessing/src/: code_tokenizer.py
