[tool.poetry]
name = "transcoder"
version = "0.1.0"
description = ""
authors = ["\"\""]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
fastBPE = "^0.1.0"
moses = "^0.10.0"
apex = "^0.9.10-alpha.0"
libclang = "^12.0.0"
submitit = "^1.3.3"
six = "^1.16.0"
sacrebleu = "1.2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
